--- a/Projeto2024/repositorium/templates/listRecords.html
+++ b/Projeto2024/repositorium/templates/listRecords.html
@@ -33,7 +33,7 @@
                 <tr>
                     <th>ID Record</th>
                     <th>Title Record</th>
-                    <th>Authors</th>
+                    <th>Contributors</th>
                     <th>Date Record</th>
                 </tr>
                 {% for record in listRecords %}
