--- a/Projeto2024/repositorium/templates/sidebar.html
+++ b/Projeto2024/repositorium/templates/sidebar.html
@@ -1,5 +1,7 @@
 <img class="logo" src="{{ url_for('static', filename='RepositoriUM.png') }}" alt="RepositoriUM Logo">
-    <ul>
+<img class="logo" src="../static/RepositoriUM.png" alt="RepositoriUM Logo">
+
+<ul>
         <li><a class="active" href="/">Home</a></li>
         <li><a href="/listDepartments">Departments</a></li>
         <li><a href="/listRecords">Records</a></li>
